--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,6 +14,7 @@ tasks:
 
   fmt: go tool gofumpt -w .
   test: go test ./...
+  test:gotestsum: go tool gotestsum
   vuln: go tool govulncheck ./...
   lint:editorconfig: go tool editorconfig-checker
   vendor: go mod vendor
