--- a/.editorconfig-checker.json
+++ b/.editorconfig-checker.json
@@ -1,3 +1,3 @@
 {
-    "Exclude": [".git", "LICENSE", ".dir-locals.el", "vendor"]
+    "Exclude": [".git", "LICENSE", ".dir-locals.el", "vendor", "bun.lockb",  "testdata"]
 }
