--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -33,8 +33,11 @@ tasks:
   tag:dryrun:
     desc: Add next semver git tag (dry-run, do not actually tag)
     cmds:
+      - echo {{.TAG_CURRENT}} -> {{.TAG_NEXT}}
       - echo git tag -a -m {{.TAG_NEXT}} {{.TAG_NEXT}}
     vars:
+      TAG_CURRENT:
+        sh: go tool svu current
       TAG_NEXT:
         sh: go tool svu next
 
